--- a/index.html
+++ b/index.html
@@ -14,22 +14,25 @@
         <div>Logo</div>
         <nav>
             <ul class="menu-list">
-                <li class="menu-indices"><a href="#">Inicio</a></li>
-                <li class="menu-indices"><a href="#">Productos</a></li>
+                <li class="menu-indices"><a href="index.html">Inicio</a></li>
+                <li class="menu-indices"><a href="/pages/producto.html">Productos</a></li>
                 <li class="menu-indices"><a href="#">Contacto</a></li>
             </ul>
         </nav>
-        <div class="carrito"><a href="#">carrito</a></div>
         <div class="login">
         </div>
     </header>
+    <div id="destacados">
+        <h2>Destacados</h2>
+        <hr>
+    </div>  
     <div class="product-stage">
         <div class="col1">
             <h2>Producto <br> Numero 1</h2>
             <h3>Lorem ipsum dolor sit amet.</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque nisi ipsa veniam accusantium, doloremque nulla.</p>
             <h4>$<span>4000</span></h4>
-            <button type="button" class="compra">Comprar ahora<img src="img/plus.png" alt=""></button>
+            <button type="button" class="compra"><a href="/pages/producto.html">Comprar ahora</a><img src="img/plus.png" alt=""></button>
         </div>
         <div class="col2">
             <img src="img/kisspng-water-bottle-mineral-water-drinking-water-water-can-5a74c6d2a09e22.4223722715176025146579.png" alt="" class="bottle">
@@ -42,15 +45,29 @@
             <h3>Lorem ipsum dolor sit amet.</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque nisi ipsa veniam accusantium, doloremque nulla.</p>
             <h4>$<span>4500</span></h4>
-            <button type="button" class="compra">Comprar ahora<img src="img/plus.png" alt=""></button>
+            <button type="button" class="compra"><a href="/pages/producto.html">Comprar ahora</a><img src="img/plus.png" alt=""></button>
         </div>
         <div class="col2">
             <img src="img/kisspng-water-bottle-mineral-water-drinking-water-water-can-5a74c6d2a09e22.4223722715176025146579.png" alt="" class="bottle">
             <div class="backstage_product"></div>
         </div>
     </div>
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+        <p class="col-md-4 mb-0 text-muted">© 2021 Company, Inc</p>
+    
+        <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+          <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+        </a>
+    
+        <ul class="nav col-md-4 justify-content-end">
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+        </ul>
+      </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="js/carrito.js"></script>
     <script src="js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
