--- a/pages/producto.html
+++ b/pages/producto.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/styles.css">
     <title>Document</title>
 </head>
@@ -13,36 +14,31 @@
         <nav>
             <ul class="menu-list">
                 <li class="menu-indices"><a href="/index.html">Inicio</a></li>
-                <li class="menu-indices"><a href="#">Productos</a></li>
+                <li class="menu-indices"><a href="producto.html">Productos</a></li>
                 <li class="menu-indices"><a href="#">Contacto</a></li>
             </ul>
         </nav>
-        <div class="carrito"><a href="#">carrito</a></div>
         <div class="login">
         </div>
     </header>
     <main>
         <div class="container">
             <div class="row">
-                <!-- Elementos generados a partir del JSON -->
                 <main id="items" class="col-sm-8 row"></main>
-                <!-- Carrito -->
                 <aside class="col-sm-4">
                     <h2>Carrito</h2>
-                    <!-- Elementos del carrito -->
                     <ul id="carrito" class="list-group"></ul>
                     <hr>
-                    <!-- Precio total -->
                     <p class="text-right">Total: <span id="total"></span>&dollar;</p>
                     <button id="boton-vaciar" class="btn btn-danger">Vaciar</button>
+                    <button id="boton-comprar" class="btn btn-primary">Comprar</button>
                 </aside>
             </div>
         </div>
         
     </main>
-    <script src="/js/main.js"></script>
     <script src="/js/carrito.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
